--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
         </div>
         <div class="topdiv">
           <a class="topmenu" href="#about-me">About Me</a>
+           <div class="topdiv">
+          <a class="topmenu" href="#about-me">Skills</a>
+           <div class="topdiv">
+          <a class="topmenu" href="#about-me">Projects</a>
+           <div class="topdiv">
+          <a class="topmenu" href="#about-me">Recommendations</a>
           <!-- Add the links for Skills, Projects and Recommendation here -->
 
         </div>
@@ -175,3 +181,4 @@
     </div>
   </body>
 </html>
+
